--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <head>
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- <script src="js/jquery-3.7.1.min.js"></script> -->
 </head>
 <body>
     <h1 id="title">Pomodoro Timer</h1>
@@ -9,11 +8,8 @@
     <div id="container">
       <input id="task" type="text" value="Type your task here." onblur="taskBlur()" onfocus="taskFocus()"></input>
       <div id="help">Enter your task above</div>
-      <!-- <div id="slider-box">
-        <div id="slider"></div>
-      </div> -->
       <div id="startBtn" onclick="startTimer()">Start</div>
-      <h2 id="break">&nbsp;</h2>
+      <h2 id="state">&nbsp;</h2>
       <h2 id="log">&nbsp;</h2>
       <div>Pomodoro: <input id="pomo-time" class="settings" type="number" value="25" onblur="if (this.value < 0) {this.value = 0;}"></input> minutes</div>
       <div>Short break: <input id="shrt-brk-time" class="settings" type="number" value="5" onblur="if (this.value < 0) {this.value = 0;}"></input> minutes</div>
